; ModuleID = '/home/carl/AnghaBench/linux/arch/s390/kvm/extr_intercept.c_handle_itdb.c'
source_filename = "/home/carl/AnghaBench/linux/arch/s390/kvm/extr_intercept.c_handle_itdb.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_8__ = type { %struct.TYPE_5__ }
%struct.TYPE_5__ = type { i32 }
%struct.kvm_vcpu = type { %struct.TYPE_7__ }
%struct.TYPE_7__ = type { %struct.TYPE_6__* }
%struct.TYPE_6__ = type { i64 }
%struct.kvm_s390_itdb = type { i32 }

@current = common dso_local global %struct.TYPE_8__* null, align 8
@PER_FLAG_NO_TE = common dso_local global i32 0, align 4
@__LC_PGM_TDB = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.kvm_vcpu*)* @handle_itdb to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @handle_itdb(%struct.kvm_vcpu* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.kvm_vcpu*, align 8
  %4 = alloca %struct.kvm_s390_itdb*, align 8
  %5 = alloca i32, align 4
  store %struct.kvm_vcpu* %0, %struct.kvm_vcpu** %3, align 8
  %6 = load %struct.kvm_vcpu*, %struct.kvm_vcpu** %3, align 8
  %7 = call i32 @IS_TE_ENABLED(%struct.kvm_vcpu* %6)
  %8 = icmp ne i32 %7, 0
  br i1 %8, label %9, label %13

9:                                                ; preds = %1
  %10 = load %struct.kvm_vcpu*, %struct.kvm_vcpu** %3, align 8
  %11 = call i32 @IS_ITDB_VALID(%struct.kvm_vcpu* %10)
  %12 = icmp ne i32 %11, 0
  br i1 %12, label %14, label %13

13:                                               ; preds = %9, %1
  store i32 0, i32* %2, align 4
  br label %42

14:                                               ; preds = %9
  %15 = load %struct.TYPE_8__*, %struct.TYPE_8__** @current, align 8
  %16 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %15, i32 0, i32 0
  %17 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %16, i32 0, i32 0
  %18 = load i32, i32* %17, align 4
  %19 = load i32, i32* @PER_FLAG_NO_TE, align 4
  %20 = and i32 %18, %19
  %21 = icmp ne i32 %20, 0
  br i1 %21, label %22, label %23

22:                                               ; preds = %14
  store i32 0, i32* %2, align 4
  br label %42

23:                                               ; preds = %14
  %24 = load %struct.kvm_vcpu*, %struct.kvm_vcpu** %3, align 8
  %25 = getelementptr inbounds %struct.kvm_vcpu, %struct.kvm_vcpu* %24, i32 0, i32 0
  %26 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %25, i32 0, i32 0
  %27 = load %struct.TYPE_6__*, %struct.TYPE_6__** %26, align 8
  %28 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %27, i32 0, i32 0
  %29 = load i64, i64* %28, align 8
  %30 = inttoptr i64 %29 to %struct.kvm_s390_itdb*
  store %struct.kvm_s390_itdb* %30, %struct.kvm_s390_itdb** %4, align 8
  %31 = load %struct.kvm_vcpu*, %struct.kvm_vcpu** %3, align 8
  %32 = load i32, i32* @__LC_PGM_TDB, align 4
  %33 = load %struct.kvm_s390_itdb*, %struct.kvm_s390_itdb** %4, align 8
  %34 = call i32 @write_guest_lc(%struct.kvm_vcpu* %31, i32 %32, %struct.kvm_s390_itdb* %33, i32 4)
  store i32 %34, i32* %5, align 4
  %35 = load i32, i32* %5, align 4
  %36 = icmp ne i32 %35, 0
  br i1 %36, label %37, label %39

37:                                               ; preds = %23
  %38 = load i32, i32* %5, align 4
  store i32 %38, i32* %2, align 4
  br label %42

39:                                               ; preds = %23
  %40 = load %struct.kvm_s390_itdb*, %struct.kvm_s390_itdb** %4, align 8
  %41 = call i32 @memset(%struct.kvm_s390_itdb* %40, i32 0, i32 4)
  store i32 0, i32* %2, align 4
  br label %42

42:                                               ; preds = %39, %37, %22, %13
  %43 = load i32, i32* %2, align 4
  ret i32 %43
}

declare dso_local i32 @IS_TE_ENABLED(%struct.kvm_vcpu*) #1

declare dso_local i32 @IS_ITDB_VALID(%struct.kvm_vcpu*) #1

declare dso_local i32 @write_guest_lc(%struct.kvm_vcpu*, i32, %struct.kvm_s390_itdb*, i32) #1

declare dso_local i32 @memset(%struct.kvm_s390_itdb*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
